force-app/main/default/objects/Listing__c/Listing__c.object-meta.xml
<CustomObject>
    <description
  >A Listing represents the marketing collateral created by a Publisher about a particular App.</description>
    <label>Listing</label>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>