force-app/main/default/objects/Listing__c/fields/AcceptedCheckoutAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedCheckoutAgreementDate__c</fullName>
    <description
  >The date where the user has accepted the checkout agreement terms</description>
    <inlineHelpText
  >The date where the user has accepted the checkout agreement terms</inlineHelpText>
    <label>Accepted Checkout Agreement Date</label>
    <type>Date</type>
</CustomField>