force-app/main/default/objects/Listing__c/fields/AcceptedFreeAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedFreeAgreementDate__c</fullName>
    <description
  >The date where the user has accepted the free agreement terms</description>
    <inlineHelpText
  >The date where the user has accepted the free agreement terms</inlineHelpText>
    <label>Accepted Free Agreement Date</label>
    <type>Date</type>
</CustomField>