force-app/main/default/objects/Listing__c/fields/AcceptedFreeAppsAgreement__c.field-meta.xml
<CustomField>
    <fullName>AcceptedFreeAppsAgreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Salesforce agreement that the publisher has to accept when a listing is free</description>
    <label>AcceptedFreeAppsAgreement</label>
    <type>Checkbox</type>
</CustomField>