force-app/main/default/objects/Listing__c/fields/AcceptedPaidAppsAgreementDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedPaidAppsAgreementDate__c</fullName>
    <label>Accepted Paid Apps Agreement Date</label>
    <type>Date</type>
</CustomField>