force-app/main/default/objects/Listing__c/fields/AchApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>AchApplicationFee__c</fullName>
    <description
  >Indicates the % to charge on listings purchased with an ACH payment type.</description>
    <inlineHelpText
  >Indicates the % to charge on listings purchased with an ACH payment type.</inlineHelpText>
    <label>ACH Application Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>