force-app/main/default/objects/Listing__c/fields/AllowACHPayment__c.field-meta.xml
<CustomField>
    <fullName>AllowACHPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Field indicating whether the Listing accepts ACH as Payment Method during the checkout flow.</description>
    <inlineHelpText
  >Indicates if ACH can be used as payment method during the checkout flow.</inlineHelpText>
    <label>AllowACHPayment</label>
    <type>Checkbox</type>
</CustomField>