force-app/main/default/objects/Listing__c/fields/AllowCCPayment__c.field-meta.xml
<CustomField>
    <fullName>AllowCCPayment__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Field indicating whether the Listing accepts Credit Cards as Payment Method during the checkout flow.</description>
    <inlineHelpText
  >Indicates if credit cards can be used as payment method during the checkout flow.</inlineHelpText>
    <label>AllowCCPayment</label>
    <type>Checkbox</type>
</CustomField>