force-app/main/default/objects/Listing__c/fields/AllowSEPAPayment__c.field-meta.xml
<CustomField>
    <fullName>AllowSEPAPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Field indicating whether the Listing accepts SEPA as Payment Method during the checkout flow.</description>
    <inlineHelpText
  >Indicates if SEPA can be used as payment method during the checkout flow.</inlineHelpText>
    <label>AllowSEPAPayment</label>
    <type>Checkbox</type>
</CustomField>