force-app/main/default/objects/Listing__c/fields/Application_Creation_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Creation_Status__c</fullName>
    <description>Status to check if Org62 Application was created</description>
    <inlineHelpText
  >Status to check if Org62 Application was created</inlineHelpText>
    <label>Application Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>