force-app/main/default/objects/Listing__c/fields/ApplicationFee__c.field-meta.xml
<CustomField>
    <fullName>ApplicationFee__c</fullName>
    <label>Credit Card Application Fee</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>