force-app/main/default/objects/Listing__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>This field has the date that the contract was approved.
Populated via a callout from the TE org.</description>
    <inlineHelpText
  >This field has the date that the contract was approved.</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>