force-app/main/default/objects/Listing__c/fields/AudioVideoDuration__c.field-meta.xml
<CustomField>
    <fullName>AudioVideoDuration__c</fullName>
    <description
  >Only applicable for Audio and Video Content listings. This will be the length of this piece of content.</description>
    <inlineHelpText
  >Only applicable for Audio and Video Content listings. This will be the length of this piece of content.</inlineHelpText>
    <label>Audio/Video Duration</label>
    <length>8</length>
    <type>Text</type>
</CustomField>