force-app/main/default/objects/Listing__c/fields/AuthorDescription__c.field-meta.xml
<CustomField>
    <fullName>AuthorDescription__c</fullName>
    <description
  >A line of description about the Author as in &lt;Name&gt; is &lt;Role&gt; at &lt;CompanyName&gt;</description>
    <label>About the Author</label>
    <length>100</length>
    <type>Text</type>
</CustomField>