force-app/main/default/objects/Listing__c/fields/Average_Review_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Review_Score__c</fullName>
    <formula>IF( Total_Review_Count__c = 0,
                0,Total_Review_Score__c  / Total_Review_Count__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Review Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>