force-app/main/default/objects/Listing__c/fields/BigLogoAttachmentID__c.field-meta.xml
<CustomField>
    <fullName>BigLogoAttachmentID__c</fullName>
    <description
  >The listing&apos;s 200 X 200 logo. This is the ID for the Attachment object (attached to this listing) where the logo is stored. Shown on the tablet listing page.</description>
    <inlineHelpText
  >The listing&apos;s 200 X 200 logo. This is the ID for the Attachment object (attached to this publisher) where the logo is stored.Shown on the tablet listing page.</inlineHelpText>
    <label>BigLogoAttachmentID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>