force-app/main/default/objects/Listing__c/fields/Business_Approval__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval__c</fullName>
    <label>Business Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Approved Pending Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>