force-app/main/default/objects/Listing__c/fields/Business_Questionnaire_Submitted_on__c.field-meta.xml
<CustomField>
    <fullName>Business_Questionnaire_Submitted_on__c</fullName>
    <description
  >The date a Business Questionnaire was submitted for this listing.</description>
    <inlineHelpText
  >The date a Business Questionnaire was submitted for this listing.</inlineHelpText>
    <label>Business Questionnaire Submitted on</label>
    <type>Date</type>
</CustomField>