force-app/main/default/objects/Listing__c/fields/Business_Rejection_Comment__c.field-meta.xml
<CustomField>
    <fullName>Business_Rejection_Comment__c</fullName>
    <description
  >The reason this listing&apos;s Business Questionnaire was rejected. This is used in the email sent to the partner, combined with the Compliance Rejection Comment, informing them that their submission was rejected.</description>
    <inlineHelpText
  >The reason this listing&apos;s Business Questionnaire was rejected. This is used in the email sent to the partner, combined with the Compliance Rejection Comment, informing them that their submission was rejected.</inlineHelpText>
    <label>Business Rejection Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>