force-app/main/default/objects/Listing__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cloud Apps</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Desktop Apps</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Mobile Apps</fullName>
            </value>
            <value>
                <fullName>Websites</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>