force-app/main/default/objects/Listing__c/fields/CategoriestoFeeds__c.field-meta.xml
<CustomField>
    <fullName>CategoriestoFeeds__c</fullName>
    <description>Categories to feed Feeds.</description>
    <inlineHelpText>Categories to feed  Feeds.</inlineHelpText>
    <label>CategoriesToFeeds</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>