force-app/main/default/objects/Listing__c/fields/Categorization__c.field-meta.xml
<CustomField>
    <fullName>Categorization__c</fullName>
    <description>Names of the Categories assigned to the listing</description>
    <label>Categorization</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>