force-app/main/default/objects/Listing__c/fields/ChatEnabled__c.field-meta.xml
<CustomField>
    <fullName>ChatEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Activate AppExchange Chat for this listing. Before you activate AppExchange Chat, verify that you&apos;ve provided a Qualified chat token for the listing.</description>
    <inlineHelpText
  >Activate AppExchange Chat for this listing. Before you activate AppExchange Chat, verify that you&apos;ve provided a Qualified chat token for the listing.</inlineHelpText>
    <label>Chat Enabled</label>
    <type>Checkbox</type>
</CustomField>