force-app/main/default/objects/Listing__c/fields/CheckoutEnabledDate__c.field-meta.xml
<CustomField>
    <fullName>CheckoutEnabledDate__c</fullName>
    <description
  >The date when the listing was associated with a Recurly plan or when it was changed form a External to a Recurly plan.</description>
    <inlineHelpText
  >The date when the listing was associated with a Recurly plan or when it was changed form a External to a Recurly plan.</inlineHelpText>
    <label>CheckoutEnabledDate</label>
    <type>Date</type>
</CustomField>