force-app/main/default/objects/Listing__c/fields/CollectPaymentBeforeInstall__c.field-meta.xml
<CustomField>
    <fullName>CollectPaymentBeforeInstall__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CollectPaymentBeforeInstall</label>
    <type>Checkbox</type>
</CustomField>