force-app/main/default/objects/Listing__c/fields/Consulting_Header_Apply_Dark_Color__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Header_Apply_Dark_Color__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if the header text color that is shown in the consulting listing detail page must be dark or light. True = dark, False = light</description>
    <inlineHelpText
  >Indicates if the header text color that is shown in the consulting listing detail page must be dark or light.</inlineHelpText>
    <label>Consulting Header Apply Dark Color</label>
    <type>Checkbox</type>
</CustomField>