force-app/main/default/objects/Listing__c/fields/Consulting_Header_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Consulting_Header_Background_Color__c</fullName>
    <description
  >Consulting header background color that is shown in the consulting listing detail page</description>
    <inlineHelpText
  >This is the consulting header background color that is shown in the consulting listing detail page. Start hexadecimal color value with #.</inlineHelpText>
    <label>Consulting Header Background Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>