force-app/main/default/objects/Listing__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <description>Contract type set via a callout from the TE org.</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>Freemium</fullName>
            </value>
            <value>
                <fullName>ISVforce clickthrough</fullName>
            </value>
            <value>
                <fullName>ISVforce non-standard</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>VAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>