force-app/main/default/objects/Listing__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description
  >The specific country in which the job must be filled.</description>
    <inlineHelpText
  >The specific country in which the job must be filled.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>