force-app/main/default/objects/Listing__c/fields/CreatedByOrgID__c.field-meta.xml
<CustomField>
    <fullName>CreatedByOrgID__c</fullName>
    <description>The Org ID of the user who created the listing</description>
    <inlineHelpText
  >The Org ID of the user who created the listing</inlineHelpText>
    <label>CreatedByOrgID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>