force-app/main/default/objects/Listing__c/fields/CreatedDateOnly__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateOnly__c</fullName>
    <description>Just the Date component of the CreatedDate</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Just the Date component of the CreatedDate</inlineHelpText>
    <label>CreatedDateOnly</label>
    <type>Date</type>
</CustomField>