force-app/main/default/objects/Listing__c/fields/CreditorIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CreditorIdentifier__c</fullName>
    <description
  >A Single Euro Payments Area Creditor Identifier or SEPA Creditor Id is a standardized and unchanging identification number that serves to unequivocally identify a creditor across Europe.</description>
    <inlineHelpText
  >A Single Euro Payments Area Creditor Identifier or SEPA Creditor Id is a standardized and unchanging identification number that serves to unequivocally identify a creditor across Europe.</inlineHelpText>
    <label>Creditor Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>