force-app/main/default/objects/Listing__c/fields/DeleteReason__c.field-meta.xml
<CustomField>
    <fullName>DeleteReason__c</fullName>
    <description
  >The reason the publisher specified when deleting this Listing.</description>
    <inlineHelpText
  >The reason the publisher specified when deleting this Listing.</inlineHelpText>
    <label>DeleteReason</label>
    <type>TextArea</type>
</CustomField>