force-app/main/default/objects/Listing__c/fields/DelistedDate__c.field-meta.xml
<CustomField>
    <fullName>DelistedDate__c</fullName>
    <description>The date when this Listing delisted.</description>
    <inlineHelpText>The date when this Listing delisted.</inlineHelpText>
    <label>DelistedDate</label>
    <type>Date</type>
</CustomField>