force-app/main/default/objects/Listing__c/fields/DelistedReason__c.field-meta.xml
<CustomField>
    <fullName>DelistedReason__c</fullName>
    <description>Reason for delisting.</description>
    <inlineHelpText>Reason for delisting.</inlineHelpText>
    <label>DelistedReason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner went out of business</fullName>
            </value>
            <value>
                <fullName>Partner bought out</fullName>
            </value>
            <value>
                <fullName>Application had technical issues</fullName>
            </value>
            <value>
                <fullName>Product failed to gain traction</fullName>
            </value>
            <value>
                <fullName>Unhappy with partnership</fullName>
            </value>
            <value>
                <fullName>Temp delisting</fullName>
            </value>
            <value>
                <fullName>App had not been updated</fullName>
            </value>
            <value>
                <fullName>No owner to maintain App</fullName>
            </value>
            <value>
                <fullName>App had low installs</fullName>
            </value>
            <value>
                <fullName>Not Lightning Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>