force-app/main/default/objects/Listing__c/fields/DemoCampaignID__c.field-meta.xml
<CustomField>
    <fullName>DemoCampaignID__c</fullName>
    <label>DemoCampaignID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>