force-app/main/default/objects/Listing__c/fields/DescriptionRichText__c.field-meta.xml
<CustomField>
    <fullName>DescriptionRichText__c</fullName>
    <description
  >Rich text for the business to build out the text on the page for content listings.</description>
    <inlineHelpText
  >Rich text for the business to build out the text on the page for content listings.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>