force-app/main/default/objects/Listing__c/fields/DirectoryEntryID__c.field-meta.xml
<CustomField>
    <fullName>DirectoryEntryID__c</fullName>
    <description
  >The ID of the legacy directory entry record from which this object was migrated.</description>
    <inlineHelpText
  >The ID of the legacy directory entry record from which this object was migrated.</inlineHelpText>
    <label>DirectoryEntryID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>