force-app/main/default/objects/Listing__c/fields/DisplayAuthor__c.field-meta.xml
<CustomField>
    <fullName>DisplayAuthor__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Will toggle on or off the author section at the bottom of the content listing as well as in the header</description>
    <inlineHelpText
  >Will toggle on or off the author section at the bottom of the content listing as well as in the header</inlineHelpText>
    <label>DisplayAuthor</label>
    <type>Checkbox</type>
</CustomField>