force-app/main/default/objects/Listing__c/fields/DisplayHover__c.field-meta.xml
<CustomField>
    <fullName>DisplayHover__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates if the tile should display the hover or not</description>
    <inlineHelpText
  >Indicates if the tile should display the hover or not</inlineHelpText>
    <label>DisplayHover</label>
    <type>Checkbox</type>
</CustomField>