force-app/main/default/objects/Listing__c/fields/DisplayNameOnTile__c.field-meta.xml
<CustomField>
    <fullName>DisplayNameOnTile__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Indicates whether or not the title is displayed on the tile</description>
    <inlineHelpText
  >Indicates whether or not the title is displayed on the tile</inlineHelpText>
    <label>DisplayNameOnTile</label>
    <type>Checkbox</type>
</CustomField>