force-app/main/default/objects/Listing__c/fields/Editions__c.field-meta.xml
<CustomField>
    <fullName>Editions__c</fullName>
    <description
  >The Salesforce editions on which the app will run.</description>
    <inlineHelpText
  >Select one or more Salesforce editions with which your app is compatible. If your app uses Salesforce APIs, it cannot run on Group or Professional editions. If your app uses any standard Salesforce objects, it cannot run on Force.com edition.</inlineHelpText>
    <label>Salesforce Edition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>FE</fullName>
            </value>
            <value>
                <fullName>DE</fullName>
            </value>
            <value>
                <fullName>PP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>