force-app/main/default/objects/Listing__c/fields/EnableDemoLeads__c.field-meta.xml
<CustomField>
    <fullName>EnableDemoLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableDemoLeads</label>
    <type>Checkbox</type>
</CustomField>