force-app/main/default/objects/Listing__c/fields/EnableInstallLeads__c.field-meta.xml
<CustomField>
    <fullName>EnableInstallLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableInstallLeads</label>
    <type>Checkbox</type>
</CustomField>