force-app/main/default/objects/Listing__c/fields/EnableLearnMoreLeads__c.field-meta.xml
<CustomField>
    <fullName>EnableLearnMoreLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableLearnMoreLeads</label>
    <type>Checkbox</type>
</CustomField>