force-app/main/default/objects/Listing__c/fields/EnableTestDriveLeads__c.field-meta.xml
<CustomField>
    <fullName>EnableTestDriveLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableTestDriveLeads</label>
    <type>Checkbox</type>
</CustomField>