force-app/main/default/objects/Listing__c/fields/EnableTrialLeads__c.field-meta.xml
<CustomField>
    <fullName>EnableTrialLeads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EnableTrialLeads</label>
    <type>Checkbox</type>
</CustomField>