force-app/main/default/objects/Listing__c/fields/EstimatedBudget__c.field-meta.xml
<CustomField>
    <fullName>EstimatedBudget__c</fullName>
    <description>Estimated Budget for the job (any job type)</description>
    <formula
  >IF(ISPICKVAL(JobType__c,'Fixed Price'),FixedPriceBudgetAvg__c,HourlyRateAvg__c * VALUE(TEXT(HoursPerWeek__c)) * VALUE(TEXT(Duration__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Estimated Budget for the job (any job type)</inlineHelpText>
    <label>Budget($ USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>