force-app/main/default/objects/Listing__c/fields/Feature1__c.field-meta.xml
<CustomField>
    <fullName>Feature1__c</fullName>
    <description>The first feature bullet on the AppListing.</description>
    <inlineHelpText>The first feature bullet on the AppListing.</inlineHelpText>
    <label>Feature1</label>
    <type>TextArea</type>
</CustomField>