force-app/main/default/objects/Listing__c/fields/Feature2__c.field-meta.xml
<CustomField>
    <fullName>Feature2__c</fullName>
    <description>The second feature bullet on the AppListing.</description>
    <inlineHelpText
  >The second feature bullet on the AppListing.</inlineHelpText>
    <label>Feature2</label>
    <type>TextArea</type>
</CustomField>