force-app/main/default/objects/Listing__c/fields/Feature3__c.field-meta.xml
<CustomField>
    <fullName>Feature3__c</fullName>
    <description>The third feature bullet on the AppListing.</description>
    <inlineHelpText>The third feature bullet on the AppListing.</inlineHelpText>
    <label>Feature3</label>
    <type>TextArea</type>
</CustomField>