force-app/main/default/objects/Listing__c/fields/Featured__c.field-meta.xml
<CustomField>
    <fullName>Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates if this listing is returned when users filter for featured apps in the search results.</description>
    <inlineHelpText
  >Indicates if this listing is returned when users filter for featured apps in the search results.</inlineHelpText>
    <label>Featured</label>
    <type>Checkbox</type>
</CustomField>