force-app/main/default/objects/Listing__c/fields/FilledDateTime__c.field-meta.xml
<CustomField>
    <fullName>FilledDateTime__c</fullName>
    <description>The date when the job was filled.</description>
    <inlineHelpText>The date when the job was filled.</inlineHelpText>
    <label>Filled Date</label>
    <type>DateTime</type>
</CustomField>