force-app/main/default/objects/Listing__c/fields/FixedPriceBudget__c.field-meta.xml
<CustomField>
    <fullName>FixedPriceBudget__c</fullName>
    <description
  >The range of budgets the employer wants to have for the job.</description>
    <inlineHelpText
  >The range of budgets the employer wants to have for the job.</inlineHelpText>
    <label>Budget($ USD)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>750</fullName>
            </value>
            <value>
                <fullName>3000</fullName>
            </value>
            <value>
                <fullName>7500</fullName>
            </value>
            <value>
                <fullName>30000</fullName>
            </value>
            <value>
                <fullName>50000</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>