force-app/main/default/objects/Listing__c/fields/FixedPriceBudgetAvg__c.field-meta.xml
<CustomField>
    <fullName>FixedPriceBudgetAvg__c</fullName>
    <description>Average value for budget.</description>
    <formula>VALUE(TEXT(FixedPriceBudget__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget ($ USD)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>