force-app/main/default/objects/Listing__c/fields/FixedPriceBudgetMax__c.field-meta.xml
<CustomField>
    <fullName>FixedPriceBudgetMax__c</fullName>
    <description>Max value for FixedPriceBudget</description>
    <formula>CASE(FixedPriceBudgetAvg__c,
          250, 500,
          750, 1000,
          3000,5000,
          7500,10000,
          30000,50000,
          50000,100000,
       100001)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max value for FixedPriceBudget</inlineHelpText>
    <label>FixedPriceBudgetMax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>