force-app/main/default/objects/Listing__c/fields/FixedPriceBudgetMin__c.field-meta.xml
<CustomField>
    <fullName>FixedPriceBudgetMin__c</fullName>
    <description>Min value of range for FixedPriceBudget</description>
    <formula>CASE(FixedPriceBudgetAvg__c,
          250, 0,
          750, 500,
          3000,1000,
          7500,5000,
          30000,10000,
          50000,50000,
       0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Min value of range for FixedPriceBudget</inlineHelpText>
    <label>FixedPriceBudgetMin__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>