force-app/main/default/objects/Listing__c/fields/Forced_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Forced_Pricing__c</fullName>
    <description
  >This pricing information will be collected at the point of approval for each listing and stored in the TE org.</description>
    <inlineHelpText
  >This pricing information will be collected at the point of approval for each listing and stored in the TE org.</inlineHelpText>
    <label>Forced Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Paid w/ Checkout</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>