force-app/main/default/objects/Listing__c/fields/Freemium__c.field-meta.xml
<CustomField>
    <fullName>Freemium__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This app is initially free but payment is required for additional users, features, or usage.</description>
    <inlineHelpText
  >This app is initially free but payment is required for additional users, features, or usage.</inlineHelpText>
    <label>Freemium</label>
    <type>Checkbox</type>
</CustomField>